<resources>
    <string name="app_name">Load.In</string>
    <string name="title_activity_login"> Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_box_input"> Box Input</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_tips_and_tricks"> Tips And Tricks</string>
    <string name="title_activity_move_inventory"> Move Inventory</string>
    <string name="title_activity_load_plan"> Load Plan</string>
    <string name="title_activity_registration"> Registration</string>
    <string name="title_activity_account"> Account</string>
    <string name="title_activity_feedback"> Feedback</string>
    <string name="title_activity_test_open_g_l">TestOpenGLActivity</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="title_activity_item_view">Item</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="prompt_phone">Phone #</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="test_harness_title">Test Harness</string>

    <string-array name="rating_choices">
        <item>1(Awful)</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(Amazing!)</item>
    </string-array>
</resources>